[package]

name = "html-bench"
version = "0.0.1"

[dependencies]
rustc-serialize = "*"

[dependencies.maud]
git = "https://github.com/lfairy/maud.git"

[dependencies.maud_macros]
git = "https://github.com/lfairy/maud.git"

[dependencies.handlebars]
git = "https://github.com/sunng87/handlebars-rust.git"

[lib]
name = "html-bench"

[[bin]]
name = "html-bench"
